--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,9 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "mongoose": "^8.16.5",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
+    "redis": "^5.8.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
